fixed dark mode

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,6 +32,7 @@ button {
   font-size: 12px;
   height: 25px;
   margin: auto;
+  background-color: white;
 }
 
 .minMinusButton, .maxMinusButton {
